# FinSysAPI

./: .gitignore  README.md  pyproject.toml
backend/: finsys.db
backend/app/: database.py  main.py
backend/app/core/: config.py  security.py
backend/app/models/: user.py
backend/app/routers/: auth.py  user.py
backend/app/schemas/: user.py
backend/app/services/: user_service.py
